plugins {
    id 'java'
    id 'org.springframework.boot' version "$springBootVersion"
    id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
}

group = 'com.kovtunov'
version = "$appVersion"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // --- SPRING BOOT STARTERS ---
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // --- SPRING CLOUD ---
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'io.github.openfeign:feign-micrometer'

    // --- PERSISTENCE & AUDITING ---
    implementation 'org.hibernate.orm:hibernate-envers'

    // --- METRICS & LOGGING ---
    runtimeOnly 'io.micrometer:micrometer-registry-otlp'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    implementation "net.logstash.logback:logstash-logback-encoder:$logstashVersion"

    // --- LOMBOK ---
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"

    // --- TESTING ---
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
    testImplementation 'io.projectreactor:reactor-test'

    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation "org.testcontainers:testcontainers:$testcontainersVersion"
    implementation 'org.postgresql:postgresql:42.7.7'
    testImplementation "com.github.dasniko:testcontainers-keycloak:$testcontainersKeycloakVersion"

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation platform("org.junit:junit-bom:$junitBomVersion")
    testImplementation 'org.junit.jupiter:junit-jupiter'

//    implementation 'org.flywaydb:flyway-core'
//    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'

}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
        mavenBom "org.junit:junit-bom:$junitBomVersion"
    }
}

test {
    useJUnitPlatform()
    include '**/*'
    jvmArgs '-Xmx2g', '-XX:+UseG1GC'
}